HaiYang/Fu Ying | #1218 add title for sms preview when create project and fix the horizontal scroll problem

--- a/datawinners/media/css/scss/section_application.scss
+++ b/datawinners/media/css/scss/section_application.scss
@@ -29,7 +29,7 @@
                 background:url(/media/images/wizard_bg.gif) repeat-x top left;
         }
         .content_wrapper{
-            padding:20px 40px 20px 40px;
+            padding:20px 10px 20px 40px;
 
         }
     }
